force-app/main/default/objects/Appuntamento__c/Appuntamento__c.object-meta.xml
<CustomObject>
    <label>Appuntamento</label>
    <nameField>
        <displayFormat>NPT-{0000000000}</displayFormat>
        <label>Numero Appuntamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appuntamenti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>