force-app/main/default/objects/Appuntamento__c/fields/Data_Appuntamento__c.field-meta.xml
<CustomField>
    <fullName>Data_Appuntamento__c</fullName>
    <formula>DATEVALUE(Data_Inizio__c)</formula>
    <label>Data Appuntamento</label>
    <type>Date</type>
</CustomField>