force-app/main/default/objects/Appuntamento__c/fields/Data_Inizio__c.field-meta.xml
<CustomField>
    <fullName>Data_Inizio__c</fullName>
    <label>Data Inizio</label>
    <type>DateTime</type>
</CustomField>